# researchpocket.github.io

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  bookmarklet.js
.cargo/: audit.toml
.github/workflows/: cargo-release.yml  ci.yml  pages.yml  release-binaries.yml
assets/: search.js  types.d.ts
crates/research-domain/: Cargo.toml
crates/research-domain/src/: document.rs  envelope.rs  genesis.rs  identity.rs  lib.rs  pack.rs  projection.rs  wasm.rs
crates/research-domain/tests/: native_convergence.rs  wasm_convergence.rs
crates/research-store/: Cargo.toml
crates/research-store/migrations/: 0001_v2_store.sql  0002_item_search.sql  0003_sync_state.sql  0004_item_enrichment.sql
crates/research-store/src/: enrichment.rs  error.rs  import.rs  lib.rs  model.rs  mutation.rs  store.rs  sync.rs
crates/research-store/tests/: local_mutation_contract.rs  sync_contract.rs  v1_import_contract.rs
docs/releases/: v2.0.0-preview.1.md  v2.0.0-preview.2.md  v2.0.0-preview.3.md  v2.0.0-preview.4.md  v2.0.0.md  v2.0.1.md
docs/v2/: ADR_0001_NATIVE_BROWSER_CAPTURE.md  ADR_0002_LINK_ENRICHMENT.md  ADR_0003_OPERATION_PACKS.md  ADR_0004_BOUNDED_FIRECRAWL_MARKDOWN.md  ADR_0005_COMPENSATING_UNDO.md  ADR_0006_STAGED_V2_PARITY.md  ADR_0007_CARGO_WORKSPACE_PUBLICATION.md  CLI.md  DATA_AND_PRIVACY.md  DESIGN_SYSTEM.md  MIGRATION.md  PRODUCT.md  ROADMAP.md  SYNC_PROTOCOL.md  THREAT_MODEL.md  WEB.md
docs/v2/spikes/: 0032-loro.md
src/: capture.rs  cli.rs  enrichment.rs  main.rs  sync.rs  tui.rs  v2.rs
src/assets/: css.rs
src/db/: mod.rs
src/handler/: mod.rs  register.rs  unregister.rs
src/provider/: mod.rs
src/provider/local/: mod.rs
src/site/: mod.rs
src/util/: mod.rs
templates/: index.stpl
templates/components/: item_tags.stpl
web/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/app/: index.html
web/docs/: index.html
web/overview/: index.html
web/public/: llms.txt  manifest.webmanifest  robots.txt  sitemap.xml  sw.js
web/public/ResearchPocket/: index.html  manifest.webmanifest  redirect.js
web/public/ResearchPocket/app/: index.html
web/scripts/: build-wasm.mjs  check-design-system.mjs  check-dist.mjs
web/src/: App.tsx  DocsApp.tsx  docs-main.tsx  main.tsx  styles.css
web/src/assets/fonts/: README.md
web/src/components/: HighlightedCodeBlock.tsx  MarkdownDocument.tsx
web/src/data/: db.test.mjs  db.ts  github.test.mjs  github.ts  library.ts  sync.ts  undo.test.mjs  undo.ts
web/src/docs/: catalog.ts
web/src/styles/: app.css  base.css  tokens.css
