[package]
name = "research"
version = "0.1.22"
edition = "2021"
rust-version = "1.94"
keywords = ["ssg", "save-it-later", "reading-list", "pocket"]
categories = ["command-line-utilities"]
authors = ["KorigamiK <korigamik.is-a.dev>"]
license = "Apache-2.0"
repository = "https://github.com/ResearchPocket/ResearchPocket"
description = "Manage your reading lists and generate a static site with your saved articles."

[workspace]
members = [".", "crates/research-domain"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.45"
chrono-tz = "0.10.4"
clap = { version = "4.6.1", features = ["cargo", "env", "derive"] }
csv = "1.4.0"
reqwest = { version = "0.13.4", features = ["json"] }
sailfish = "0.11.2"
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
sqlx = { version = "0.9.0", default-features = false, features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
url = "2.5.8"

[target.'cfg(windows)'.dependencies]
tauri-winrt-notification = "0.8.0"
