[package]
name = "research"
version = "0.1.22"
edition = "2024"
rust-version = "1.94"
keywords = ["bookmarks", "reading-list", "local-first", "knowledge", "cli"]
categories = ["command-line-utilities", "database"]
authors = ["KorigamiK <korigamik.is-a.dev>"]
license = "Apache-2.0"
repository = "https://github.com/ResearchPocket/ResearchPocket"
description = "A human-first, local-first personal library for saved URLs."

[workspace]
members = [".", "crates/research-domain", "crates/research-store"]
resolver = "2"

[dependencies]
clap = { version = "4.6.1", features = ["cargo", "env", "derive"] }
directories = "6.0.0"
research-store = { path = "crates/research-store" }
serde = "1.0.228"
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
