[package]
name = "research"
version = "0.1.22"
edition = "2024"
rust-version = "1.94"
keywords = ["bookmarks", "reading-list", "local-first", "knowledge", "cli"]
categories = ["command-line-utilities", "database"]
authors = ["KorigamiK <korigamik.is-a.dev>"]
license = "Apache-2.0"
repository = "https://github.com/ResearchPocket/ResearchPocket"
description = "A human-first, local-first personal library for saved URLs."

[workspace]
members = [".", "crates/research-domain", "crates/research-store"]
resolver = "2"

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.45", default-features = false, features = ["std"] }
clap = { version = "4.6.1", features = ["cargo", "env", "derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
ratatui = { version = "0.30.2", default-features = false, features = ["crossterm_0_29"] }
reqwest = { version = "0.13.4", features = ["json"] }
research-domain = { path = "crates/research-domain" }
research-store = { path = "crates/research-store" }
serde = "1.0.228"
serde_json = "1.0.150"
signal-hook = { version = "0.4.4", default-features = false }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "signal", "time"] }
unicode-width = "0.2.2"
url = "2.5.8"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["std", "block2", "NSApplication", "NSResponder", "NSWorkspace"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["std", "NSArray", "NSObject", "NSString", "NSURL"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_UI_Shell"] }
winreg = "0.56.0"

[dev-dependencies]
tempfile = "3.27.0"
