[package]
name = "research-domain"
version = "0.0.0"
edition = "2024"
rust-version = "1.94"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.45", default-features = false, features = ["std"] }
loro = { version = "=1.13.7", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
thiserror = "2.0.18"
url = "2.5.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "=0.2.126"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "=0.3.76"
