[package]
name = "research-store"
version = "0.0.0"
edition = "2024"
rust-version = "1.94"
publish = false

[dependencies]
chrono = { version = "0.4.45", default-features = false, features = ["clock", "serde"] }
research-domain = { path = "../research-domain" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
sqlx = { version = "0.9.0", default-features = false, features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["fs", "sync"] }
uuid = { version = "1.23.4", features = ["serde", "v7"] }

[dev-dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
